Update gitignore to estore wwwroot and ability to add departments

--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Departments/Index.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Departments/Index.cshtml
@@ -14,11 +14,11 @@
                     <div class="row gx-3 gy-3">
                         <div class="col-12">
                             <label>Name</label>
-                            <input type="text" class="form-control" asp-for="@Model.Name" disabled />
+                            <input type="text" class="form-control" asp-for="@Model.Name" />
                         </div>
                         <div class="col-12">
                             <label>Description</label>
-                            <textarea rows="5" cols="555" class="form-control" asp-for="@Model.Description" disabled></textarea>
+                            <textarea rows="5" cols="555" class="form-control" asp-for="@Model.Description"></textarea>
                         </div>
                     </div>
                     <h5 class="card-title mt-3">Instructors</h5>
