--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Departments/New.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Departments/New.cshtml
@@ -21,7 +21,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" tabindex="-1">Save</button>
+                <button type="button" class="btn btn-primary" tabindex="-1" onclick="createDepartment()">Save</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" tabindex="-1">Cancel</button>
             </div>
         </div>
