--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Shared/_Layout.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                     <li>
                         <a href="#" class="nav-link link-dark">
                             <i class="bi bi-journals me-2"></i>
-                            Track and Strand
+                            Subjects
                         </a>
                     </li>
                     <li>
