add paginated list of subjects and search functionality
Will continue on ability to view/add/update subjects

--- a/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Shared/_Layout.cshtml
+++ b/SHS.StudentPortal/SHS.StudentPortal.Web/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link link-dark">
+                        <a id="subjectsMenu" class="nav-link link-dark" asp-controller="Home" asp-action="Subjects">
                             <i class="bi bi-journals me-2"></i>
                             Subjects
                         </a>
